--- a/style.css
+++ b/style.css
@@ -1,13 +1,125 @@
 @import "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Hammersmith One", serif;
+}
 
 body {
+  background-color: #1c1c1c;
 }
 
 header {
+  background: linear-gradient(to bottom right, #1c1c1c, #010028);
+  height: auto;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 25px;
 }
 
-main {
+/* Menu Burger */
+.menu-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: end;
+  margin: 20px 12px 0px 0px;
 }
 
-footer {
+.burger-menu {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  width: 30px;
+  cursor: pointer;
+}
+
+.burger-menu div {
+  width: 100%;
+  height: 3px;
+  background-color: white;
+  border-radius: 2px;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.menu-items {
+  display: none;
+  flex-direction: column;
+  gap: 10px;
+  position: relative;
+  margin-top: 20px;
+  background: white;
+  color: black;
+  padding: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+.menu-items a {
+  text-decoration: none;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.menu-items a:hover {
+  color: #010028;
+}
+
+.menu-container.active .menu-items {
+  display: flex;
+}
+
+.menu-container.active .burger-menu div:nth-child(1) {
+  transform: translateY(10px) rotate(45deg);
+}
+
+.menu-container.active .burger-menu div:nth-child(2) {
+  opacity: 0;
+}
+
+.menu-container.active .burger-menu div:nth-child(3) {
+  transform: translateY(-10px) rotate(-45deg);
+}
+
+/* Abaixo do menu burger */
+#title-name {
+  text-align: center;
+  font-size: 1.4em;
+  font-weight: 300;
+}
+
+#data-subtitle-head {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1em;
+  font-weight: 300;
+}
+
+#div-button-head {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px 0px 30px 0px;
+}
+
+#div-button-head > button {
+  color: white;
+  padding: 6px 40px;
+  background-color: #1e88e5;
+  border: none;
+  text-align: center;
+  cursor: pointer;
+  font-size: 0.9em;
+}
+
+#div-button-head > button:hover {
+  transition: 0.1;
+  background-color: #1467af;
 }
