--- a/style.css
+++ b/style.css
@@ -99,6 +99,12 @@ header {
   text-decoration: none;
 }
 
+.menu-content > a:hover {
+  color: #0000ff;
+  text-decoration: none;
+  transition: 0.2s;
+}
+
 .menu.show {
   transition: 0.2s;
   display: block;
@@ -261,6 +267,34 @@ main {
   letter-spacing: 1px;
 }
 
+/* SOFT SKILLS */
+#section-soft-skills {
+  display: flex;
+  justify-content: center;
+  margin: 30px 0px 0px 0px;
+}
+
+#title-soft-skills {
+  text-align: center;
+  padding: 0px 0px 20px 0px;
+  margin: 0px 0px 0px 0px;
+  font-weight: 100;
+  font-size: 1.3em;
+  color: #010028;
+}
+
+.list-soft-skills {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  list-style: none;
+  text-align: center;
+  color: #303030;
+}
+
+.list-soft-skills > li {
+  font-family: "Courier New", Courier, monospace;
+}
 /* Footer */
 footer {
   color: #000000;
