--- a/style.css
+++ b/style.css
@@ -68,6 +68,15 @@ body {
   transition: 0.2s;
 }
 
+.icon-svg-2 {
+  fill: #ffffff;
+}
+
+.icon-svg-2:hover {
+  fill: #000000;
+  transition: 0.2s;
+}
+
 .icon-2x {
   width: 28px;
   height: 28px;
@@ -432,7 +441,37 @@ main {
 
 /* Footer */
 footer {
-  color: #000000;
-  background-color: #ffffff;
-  margin: 20px 30px 0px 30px;
+  color: #ffffff;
+  background-color: #0463d1;
+  padding: 20px 30px 0px 30px;
+}
+
+#conteiner-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  gap: 40px;
+}
+
+#title-footer > h2 {
+  font-weight: 200;
+  text-align: center;
+}
+
+#email {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#img-rede-social {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+#direitos-reservados > p {
+  text-align: center;
+  font-size: 0.8em;
+  padding: 20px 0px;
 }
