add: menu bar ok

--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@
 }
 
 /* Rolagem vertical apenas */
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   overflow-x: hidden;
   overflow-y: scroll;
