--- a/style.css
+++ b/style.css
@@ -1,48 +1,64 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import url("https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Karla:ital,wght@0,200..800;1,200..800&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-html,
 body {
-  overflow-x: hidden;
-  width: 100%;
+  font-family: "Karla", "Arial", "serif";
 }
 
-section,
-header,
-footer {
-  max-width: 100vw;
+@keyframes pulse-custom {
+  0% {
+    background-color: #3b82f6; /* Azul-500 */
+    box-shadow: 0 0 10px rgba(59, 130, 246, 0.5);
+  }
+  50% {
+    background-color: #2563eb; /* Azul-600 */
+    box-shadow: 0 0 20px rgba(37, 99, 235, 0.7);
+  }
+  100% {
+    background-color: #3b82f6; /* Azul-500 */
+    box-shadow: 0 0 10px rgba(59, 130, 246, 0.5);
+  }
 }
 
-header {
-  width: 100vw;
-  left: 0;
+.animate-pulse-custom {
+  animation: pulse-custom 1.5s infinite;
 }
 
-.line-clamp-3 {
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
+#scrollToTopBtn {
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
-/* Estilizando a barra de rolagem para navegadores WebKit (Chrome, Edge, Safari, Opera) */
-::-webkit-scrollbar {
-  width: 8px; /* Largura da barra de rolagem */
+/* Dark-mode */
+/* Dark mode */
+.dark {
+  background-color: #111;
+  color: white;
 }
 
-::-webkit-scrollbar-track {
-  background: #f1f1f100; /* Cor do fundo da barra */
-  border-radius: 10px; /* Bordas arredondadas */
+.dark .bg-white {
+  background-color: #333;
 }
 
-::-webkit-scrollbar-thumb {
-  background: #2c3e50; /* Cor da alça da barra */
-  border-radius: 10px; /* Bordas arredondadas */
+.dark .bg-black {
+  background-color: #1a202c;
 }
 
-::-webkit-scrollbar-thumb:hover {
-  background: #1a252f; /* Cor ao passar o mouse */
+.dark .text-gray-800 {
+  color: #f0f0f0;
+}
+
+.dark .text-gray-900 {
+  color: #e0e0e0;
+}
+
+.dark svg {
+  stroke: white;
+  fill: white;
+}
+
+.dark #home-svg {
+  fill: none;
+}
+
+#darkModeToggle:focus {
+  outline: none;
 }
